# advent-of-code-boilerplate

./: .gitignore  CMakeLists.txt  README.md
code-boilerplate/: CMakeLists.txt  solution.cpp
